...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonEditCurrentJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
...
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:onClick="handleClick"
                android:text="enter job offers" />

            <Button
                android:id="@+id/buttonAdjustSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:onClick="handleClick"
...
