...
                    android:text="Title"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idCurrTitle"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoText="false"
                    android:background="@color/white"
                    android:ems="10"
...
                    android:text="Company"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idCurrCompany"
                    android:layout_width="253dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="textPersonName"
...
                    android:layout_weight="1"
                    android:text="Location"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idCurrCity"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="3dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="City"
                    android:inputType="textPersonName"
                    android:textSize="25sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                <EditText
                    android:id="@+id/idCurrState"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="State"
...
                    android:text="AYS"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idCurrAYS"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoText="false"
                    android:background="@color/white"
                    android:ems="10"
...
                    android:text="AYB"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idCurrAYB"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoText="false"
                    android:background="@color/white"
                    android:ems="10"
...
                    android:text="LT"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idCurrLT"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoText="false"
                    android:background="@color/white"
                    android:ems="10"
...
                    android:text="CSO"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idCurrCSO"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoText="false"
                    android:background="@color/white"
                    android:ems="10"
...
                    android:text="HBP"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idCurrHBP"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoText="false"
                    android:background="@color/white"
                    android:ems="10"
...
                    android:text="WF"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/idCurrWF"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoText="false"
                    android:background="@color/white"
                    android:ems="10"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="handleClickSave"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/idSaveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
...
